TND-8778: completion of the script a gift from a friend

--- a/src/containers/ClientAppPage/ClientAppForm/FormConstructor/FormConstructor.module.css
+++ b/src/containers/ClientAppPage/ClientAppForm/FormConstructor/FormConstructor.module.css
@@ -31,6 +31,14 @@
     align-items: flex-end;
 }
 
+.propertiesRow:nth-child(4) {
+    align-items: flex-start;
+}
+
+.propertiesRow:nth-child(4) :global(.ant-row) {
+    margin-bottom: 0 !important;
+}
+
 .propertiesRow:not(:last-child) {
     margin-bottom: 5px;
 }
